update fixed ios overflow

--- a/component/index.less
+++ b/component/index.less
@@ -1,3 +1,7 @@
+html,
+body {
+    overflow: hidden;
+} 
 .position-center-div {
     position: absolute;
     margin: auto;
